# XPlaneImGuiPluginTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  XPlaneImGuiPluginTemplate.sln
.github/workflows/: build.yml
XPlaneImGuiPlugin/: CMakeLists.txt  ImGuiDemoRenderer.cpp  ImGuiDemoRenderer.h  MenuHandler.cpp  MenuHandler.h  XPlaneImGui.cpp  XPlaneImGuiPlugin.vcxproj  XPlaneImGuiPlugin.vcxproj.filters  XPlaneLog.cpp  XPlaneLog.h  imgui_impl_xplane.cpp  imgui_impl_xplane.h
XPlaneImGuiPlugin/ImGuiExamples/: ImGuiCustomWidgets.cpp  ImGuiCustomWidgets.h  ImGuiDrawing.cpp  ImGuiDrawing.h  ImGuiInputs.cpp  ImGuiInputs.h  ImGuiLayouts.cpp  ImGuiLayouts.h  ImGuiSimpleUI.cpp  ImGuiSimpleUI.h
